# KinectV2

./: .gitignore  CMakeLists.txt  README.md  scan.bat  setbin.bat
Dependencies/BGL/include/: BGL.h  BglDefines.h  BglToolKit.h  BglToolMesh.h  BglToolPointCloud.h  Color4.h  ComputeMeshGeometry.h  ComputeMeshTopology.h  ConsolidateGrid.h  Curvature.h  CurveOnMesh.h  DumpInfo.h  FitPointCloud.h  GeneralMatrix.h  GppDefines.h  HalfMesh.h  IGridPointCloud.h  IPointCloud.h  IPointList.h  IQuadMesh.h  ITriMesh.h  ITriangleList.h  Matrix4x4.h  MeshCutCurve.h  OffsetMesh.h  Parser.h  Plane3.h  PointCloud.h  PointCloudInfo.h  PointCloudNormal.h  Profiler.h  QuadMesh.h  SampleGrid.h  SampleMesh.h  SamplePointCloud.h  SparseMatrix.h  SplitMesh.h  SubdivideMesh.h  ThreadPool.h  ToolDebug.h  (+7 more)
Dependencies/BGL/lib/: bgl.lib  bgl_d.lib  hpgl.lib  hpgl_d.lib
Dependencies/BasicGeometryLib/include/: BGL.h  IGridPointCloud.h  IPointCloud.h  Parser.h  ToolLog.h
Dependencies/BasicGeometryLib/lib/: basicgeometrylib.lib  basicgeometrylib_d.lib
Dependencies/OGRE/config/: ogre.cfg
Dependencies/OGRE/config/debug/: plugins_d.cfg
Dependencies/OGRE/config/release/: plugins.cfg
Dependencies/OGRE/include/OGRE/: OgreBuildSettings.h  OgreExports.h
Dependencies/OGRE/include/OGRE/Volume/: OgreVolumePrerequisites.h
Dependencies/OGRE/lib/: OIS.lib  OIS_d.lib  RenderSystem_GL.lib  RenderSystem_GL_d.lib
Dependencies/OGRE/media/: Point.material
Src/: AppKinect2.cpp  AppKinect2.h  Framework.cpp  ToolKit.cpp  ToolKit.h  main.cpp
(+6 files in other folders)
